# ClassifyBook

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/: API_KEY.env  inferencePipeline.py  inference_pipeline.py  lambda_handler.py  main.py  pyproject.toml  training_pipeline.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts
