[tool.poetry]
name = "classifybook"
version = "0.1.0"
description = "Classify Books into multiple genres it belongs to"
authors = ["upagupta2003 <upagupta2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
PyPDF2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
