[tool.poetry]
name = "classifybook"
version = "0.1.0"
description = "Classify Books into multiple genres it belongs to"
authors = ["upagupta2003 <upagupta2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
PyPDF2 = "^3.0.1"
mangum = "^0.17.0"
transformers = "^4.44.2"
python-dotenv = "^1.0.1"
torch = "^2.4.1"
sentencepiece = "^0.2.0"
protobuf = "^5.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
