[tool.poetry]
name = "classifybook"
version = "0.1.0"
description = "Classify Books into multiple genres it belongs to"
authors = ["upagupta2003 <upagupta2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
PyPDF2 = "^3.0.1"
mangum = "^0.17.0"
python-dotenv = "^1.0.1"
sentencepiece = "^0.2.0"
protobuf = "^5.28.1"
datasets = "^3.0.0"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
